# c-chat

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
scripts/: update-version.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mcp.rs  sync.rs
src/components/: AnimatedLogo.vue  ArtifactsPanel.vue  ChatSettingsFlyout.vue  ConversationTree.vue  FileTree.vue  FileTreeNode.vue  MessageBubble.vue  SidebarNavigation.vue  SidebarProject.vue  SyncStatus.vue  TitleBar.vue  ToolsSelector.vue
src/router/: index.ts
src/services/: backup.ts  clientTools.ts  llm.ts  mcp.ts  sync.ts
src/stores/: chat.ts  settings.ts  sync.ts
src/utils/: artifact-resolver.ts  markdown.ts  partialJson.ts  throttle.ts  treeLayout.ts
src/views/: ChatView.vue  MobileProjectsView.vue  SettingsView.vue
